chore(score): minor changes